--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
             <div class="section-heading-gray">Portfolio</div>
             <div class="section-heading-bold-white">I love to share my achievements</div>
             <div class="flex-wrapper achievements">
-                <div class="achievements-item-1">
+                <div class="achievements-item-1" style="background-image: url("") ;">
                     <div class="achievements-subtext">clients</div>
                     <div class="achievements-number">420</div>
                 </div>
